[package]
name = "random"
version = "0.14.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides sources of randomness."
documentation = "https://docs.rs/random"
homepage = "https://github.com/stainless-steel/random"
repository = "https://github.com/stainless-steel/random"
